--- a/index.html
+++ b/index.html
@@ -1,32 +1,156 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendario con Fechas Deshabilitadas</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-
-</head>
-<body>
-    <h1>Selecciona una fecha</h1>
-    <input type="text" id="calendario" placeholder="Elige una fecha">
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TuAgenda</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link href="style.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const disabledDates = ["2024-08-28", "2024-08-29", "2024-09-01"];
-            const redDates = ["2024-09-05", "2024-09-10"];
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
+    />
+  </head>
+  <body class="bg-dark text-light">
+    <header class="bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light container">
+        <a class="navbar-brand d-flex align-items-center" href="#">
+          <img src="img/logo-cuadrado.png" alt="Logo" width="45" height="45" />
+          <span class="ms-2 fw-bold fst-italic">TuAgenda</span>
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Presupuesto</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-primary" href="demo-admin.html">Demo administrador</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
-            flatpickr("#calendario", {
-                disable: disabledDates,
-                onDayCreate: function(dObj, dStr, fp, dayElem) {
-                    const date = dayElem.dateObj.toISOString().split('T')[0];
-                    if (redDates.includes(date)) {
-                        dayElem.classList.add('red');
-                    }
-                }
-            });
-        });
-    </script>
-</body>
+    <!-- Carousel -->
+    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/carrousel-1.png" class="d-block w-100" alt="Imagen 1" />
+        </div>
+        <div class="carousel-item">
+          <img src="img/carrousel-2.png" class="d-block w-100" alt="Imagen 2" />
+        </div>
+        <div class="carousel-item">
+          <img src="img/carrousel-3.png" class="d-block w-100" alt="Imagen 3" />
+        </div>
+        <div class="carousel-item">
+          <img src="img/carrousel-4.png" class="d-block w-100" alt="Imagen 4" />
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    <!-- Google Button -->
+    <div class="d-flex justify-content-center mt-4">
+      <div id="g_id_onload"
+        data-client_id="672627636268-7pf5a9kdj92ivcegberd0i6u3s825u82.apps.googleusercontent.com"
+        data-callback="handleCredentialResponse">
+      </div>
+      <div class="g_id_signin" data-type="standard" data-shape="rectangular" data-theme="outline" data-text="sign_in_with" data-size="large"></div>
+    </div>
+
+    <!-- Tattoo Selection Section -->
+    <section class="container mt-5">
+      <h2 class="text-center">Selecciona un tatuador:</h2>
+      <div id="tatuadorButtons" class="d-flex flex-wrap justify-content-center gap-3 mt-3"></div>
+
+      <h2 class="text-center mt-5">Selecciona el tipo de tatuaje:</h2>
+      <div id="tipoTatuajeButtons" class="d-flex flex-wrap justify-content-center gap-3 mt-3"></div>
+
+      <h2 class="text-center mt-5">Selecciona la zona:</h2>
+      <div id="zonaTatuajeButtons" class="d-flex flex-wrap justify-content-center gap-3 mt-3"></div>
+    </section>
+
+    <!-- Calendar Section -->
+    <section class="container text-center mt-5">
+      <h2>Selecciona una fecha</h2>
+      <div class="d-flex justify-content-center mt-3">
+        <input type="text" id="calendario" class="form-control w-50" placeholder="Elige una fecha" />
+      </div>
+    </section>
+
+    <!-- Time Selection -->
+    <div class="container text-center mt-5">
+      <h2>Elegi la hora</h2>
+      <select id="hora" class="form-select w-50 mx-auto mt-3">
+        <option value="">Disponibilidad</option>
+        <option value="10hs">10 hs</option>
+        <option value="12hs">12 hs</option>
+        <option value="14hs">14 hs</option>
+        <option value="16hs">16 hs</option>
+      </select>
+    </div>
+
+    <!-- Client Data Form -->
+    <div class="container border mt-5 p-4">
+      <h2>Datos del cliente</h2>
+      <div class="mb-3">
+        <label for="nombre_input" class="form-label">Nombre completo:</label>
+        <input type="text" id="nombre_input" class="form-control" />
+      </div>
+      <div class="mb-3">
+        <label for="notas_input" class="form-label">Notas adicionales:</label>
+        <textarea id="notas_input" class="form-control" rows="4"></textarea>
+      </div>
+      <button class="btn btn-primary w-100 boton-agendar" id="agendarTurno">Agendar Turno</button>
+    </div>
+
+    <footer class="footer-custom mt-5">
+      <div class="container d-flex justify-content-between align-items-center flex-wrap">
+        <p class="mb-0">&copy; 2024 TuAgenda. Todos los derechos reservados.</p>
+        <p class="mb-0">
+          <a href="#" class="me-2">Acerca de</a> |
+          <a href="#" class="mx-2">Contacto</a> |
+          <a href="#" class="ms-2">Política de Privacidad</a>
+        </p>
+        <div class="social-icons">
+          <a href="#" class="me-2"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="me-2"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </footer>
+
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  </body>
 </html>
