script fue mejorado

--- a/index.html
+++ b/index.html
@@ -89,10 +89,14 @@
     </div>
 
     <!-- Tattoo Selection Section -->
-    <section class="container mt-5">
+
+    <section class="container mt-5"></section>
       <h2 class="text-center">Selecciona un tatuador:</h2>
       <div id="tatuadorButtons" class="d-flex flex-wrap justify-content-center gap-3 mt-3"></div>
+    </section>
 
+
+    <section id="sectionTipoTatuaje" class="container mt-5">
       <h2 class="text-center mt-5">Selecciona el tipo de tatuaje:</h2>
       <div id="tipoTatuajeButtons" class="d-flex flex-wrap justify-content-center gap-3 mt-3"></div>
 
@@ -101,7 +105,7 @@
     </section>
 
     <!-- Calendar Section -->
-    <section class="container text-center mt-5">
+    <section id="sectionCalendar" class="container text-center mt-5">
       <h2>Selecciona una fecha</h2>
       <div class="d-flex justify-content-center mt-3">
         <input type="text" id="calendario" class="form-control w-50" placeholder="Elige una fecha" />
@@ -109,7 +113,7 @@
     </section>
 
     <!-- Time Selection -->
-    <div class="container text-center mt-5">
+    <div id="divDisponibilidad" class="container text-center mt-5">
       <h2>Elegi la hora</h2>
       <select id="hora" class="form-select w-50 mx-auto mt-3">
         <option value="">Disponibilidad</option>
@@ -121,7 +125,7 @@
     </div>
 
     <!-- Client Data Form -->
-    <div class="container border mt-5 p-4">
+    <div id="divAgendar" class="container border mt-5 p-4">
       <h2>Datos del cliente</h2>
       <div class="mb-3">
         <label for="nombre_input" class="form-label">Nombre completo:</label>
