--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="index-script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   </body>
 </html>
