--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   </body>
 
-  <footer class="footer-custom mt-5">
+  <footer class="footer-custom" style="margin-top:9rem ">
     <div class="container d-flex justify-content-between align-items-center flex-wrap">
       <p class="mb-0">&copy; 2024 TuAgenda. Todos los derechos reservados.</p>
       <p class="mb-0">
