cambie el template del mail

--- a/demo-admin.html
+++ b/demo-admin.html
@@ -93,12 +93,15 @@
         <textarea
           id="template-email"
           name="template-email"
-          rows="5"
+          rows="10"
           class="form-control"
         >
-Estimado/a [Nombre del cliente],
+Gracias por reservar tu turno ♥
 
-Le confirmamos su turno para el [Día] a las [Hora].
+Te recuerdo que el mismo sera el {{fechaHora}} . El alias para la seña es aggiegonz (María Agostina González). La seña es de $5000 (no reembolsable y válida únicamente para el turno coordinado), recorda que luego de tomado el turno, debes enviar dentro de las proximas 48hs el comprobante de la transferencia a este mismo mail para que el turno sea reconfirmado. En caso de no hacerlo, pasadas las 48hs el mismo sera cancelado automáticamente. 
+La dire es Belgrano 2797, timbre 4. Por favor asistir sin acompañantes y no usar cremas anestésicas. La tolerancia máxima es de 10 min.
+        
+Nos vemos pronto ✨
 
 Saludos,
 TuAgenda
