--- a/demo-admin.html
+++ b/demo-admin.html
@@ -98,13 +98,11 @@
         >
 Gracias por reservar tu turno ♥
 
-Te recuerdo que el mismo sera el {{fechaHora}} . El alias para la seña es aggiegonz (María Agostina González). La seña es de $5000 (no reembolsable y válida únicamente para el turno coordinado), recorda que luego de tomado el turno, debes enviar dentro de las proximas 48hs el comprobante de la transferencia a este mismo mail para que el turno sea reconfirmado. En caso de no hacerlo, pasadas las 48hs el mismo sera cancelado automáticamente. 
-La dire es Belgrano 2797, timbre 4. Por favor asistir sin acompañantes y no usar cremas anestésicas. La tolerancia máxima es de 10 min.
-        
-Nos vemos pronto ✨
+Te recuerdo que el mismo sera el {{fechaHora}} . El alias para la seña es aggiegonz (María Agostina González). La seña es de $5000 (no reembolsable y válida únicamente para el turno coordinado), recordá que luego de tomado el turno, debes enviar dentro de las próximas 48hs el comprobante de la transferencia a este mismo mail para que el turno sea reconfirmado. En caso de no hacerlo, pasadas las 48 hs, el mismo será cancelado automáticamente. 
+La dirección es Belgrano 2797, timbre 4. Por favor asistir sin acompañantes y no usar cremas anestésicas. La tolerancia máxima es de 10 min.
 
-Saludos,
-TuAgenda
+Nos vemos pronto ✨
+Saludos,TuAgenda
         </textarea>
       </div>
       <button id="guardar" type="submit" class="btn btn-primary w-100">Guardar</button>
